--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -766,7 +766,7 @@
             </objects>
             <point key="canvasLocation" x="1488" y="-1009"/>
         </scene>
-        <!--Enter Pickup Drop Off View Controller - Stowaway-->
+        <!--Enter Pickup Drop Off View Controller-->
         <scene sceneID="k71-rh-kI6">
             <objects>
                 <viewController storyboardIdentifier="EnterPickupDropOffViewController" id="gzB-dY-rge" customClass="EnterPickupDropOffViewController" sceneMemberID="viewController">
@@ -778,14 +778,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
                                 <rect key="frame" x="0.0" y="159" width="320" height="321"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="gzB-dY-rge" id="cVN-PG-0e6"/>
                                 </connections>
                             </mapView>
-                            <searchBar contentMode="redraw" restorationIdentifier="pickUpSearchBar" searchBarStyle="minimal" placeholder="Enter Pick Up Location" translatesAutoresizingMaskIntoConstraints="NO" id="bxD-02-fZW" userLabel="pickUpSearchBar">
+                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="pickUpSearchBar" searchBarStyle="minimal" placeholder="Enter Pick Up Location" translatesAutoresizingMaskIntoConstraints="NO" id="bxD-02-fZW" userLabel="pickUpSearchBar">
                                 <rect key="frame" x="0.0" y="54" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -793,7 +793,7 @@
                                     <outlet property="delegate" destination="gzB-dY-rge" id="m7G-gc-iV9"/>
                                 </connections>
                             </searchBar>
-                            <searchBar contentMode="redraw" restorationIdentifier="dropOffSearchBar" searchBarStyle="minimal" placeholder="Enter Drop Off Location" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-W9-bgZ" userLabel="dropOffSearchBar">
+                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="dropOffSearchBar" searchBarStyle="minimal" placeholder="Enter Drop Off Location" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-W9-bgZ" userLabel="dropOffSearchBar">
                                 <rect key="frame" x="0.0" y="87" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -801,30 +801,34 @@
                                     <outlet property="delegate" destination="gzB-dY-rge" id="6QT-DA-c6F"/>
                                 </connections>
                             </searchBar>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
-                                <rect key="frame" x="0.0" y="126" width="320" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
+                                <rect key="frame" x="68" y="129" width="189" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Ph1-R4-vjs"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="backgroundColor" red="0.25882352941176467" green="0.62745098039215685" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Find Crew">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="findCrewButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="C3A-cm-fgE"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="245" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="E40E0461-D0FE-43F7-916A-E0E6FA3B377D" colorSpace="pattern"/>
+                                <color key="color" patternImage="2A048E5B-4D35-42EC-80C3-CD7D4CEA3847" colorSpace="pattern"/>
                             </activityIndicatorView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pr-OR-ZzO">
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9pr-OR-ZzO">
                                 <rect key="frame" x="0.0" y="9" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <navigationItem title="StowAway" id="poW-dx-XrL">
+                                    <navigationItem title="STOWAWAY" id="poW-dx-XrL">
                                         <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="UhN-tw-WfS"/>
                                     </navigationItem>
                                 </items>
@@ -832,27 +836,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="9pr-OR-ZzO" firstAttribute="top" secondItem="VJT-lO-FNI" secondAttribute="top" constant="9" id="2LJ-Pj-xqc"/>
-                            <constraint firstItem="9pr-OR-ZzO" firstAttribute="leading" secondItem="bxD-02-fZW" secondAttribute="leading" id="CFU-M8-6ir"/>
-                            <constraint firstItem="WEi-k0-yGT" firstAttribute="trailing" secondItem="OVl-W9-bgZ" secondAttribute="trailing" id="FCN-q0-g3Z"/>
-                            <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="9pr-OR-ZzO" secondAttribute="bottom" constant="1" id="IU4-Q8-esf"/>
-                            <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="WEi-k0-yGT" secondAttribute="bottom" constant="3" id="LJc-am-8NX"/>
-                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="leading" secondItem="WEi-k0-yGT" secondAttribute="leading" id="PLJ-39-gFw"/>
-                            <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="OVl-W9-bgZ" secondAttribute="bottom" constant="28" id="QKp-fo-jl6"/>
-                            <constraint firstAttribute="trailing" secondItem="RED-KU-XOZ" secondAttribute="trailing" id="WSh-gA-wmt"/>
-                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="7XM-fk-vcd" secondAttribute="bottom" constant="198" id="ZsZ-1x-dQn"/>
-                            <constraint firstAttribute="bottom" secondItem="RED-KU-XOZ" secondAttribute="bottom" id="d8f-UH-Ezc"/>
-                            <constraint firstItem="7XM-fk-vcd" firstAttribute="leading" secondItem="VJT-lO-FNI" secondAttribute="leading" constant="144" id="jBY-v1-kuM"/>
-                            <constraint firstItem="bxD-02-fZW" firstAttribute="leading" secondItem="OVl-W9-bgZ" secondAttribute="leading" id="jDK-Xz-1FL"/>
-                            <constraint firstItem="bxD-02-fZW" firstAttribute="trailing" secondItem="9pr-OR-ZzO" secondAttribute="trailing" id="jkT-WW-bHN"/>
-                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="trailing" secondItem="bxD-02-fZW" secondAttribute="trailing" id="l5K-wI-v2Z"/>
-                            <constraint firstItem="WEi-k0-yGT" firstAttribute="trailing" secondItem="RED-KU-XOZ" secondAttribute="trailing" id="leq-ru-6rf"/>
-                            <constraint firstItem="WEi-k0-yGT" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="28" id="nqz-MA-93M"/>
-                            <constraint firstItem="RED-KU-XOZ" firstAttribute="leading" secondItem="WEi-k0-yGT" secondAttribute="leading" id="r9w-Vw-sLZ"/>
-                            <constraint firstItem="WEi-k0-yGT" firstAttribute="leading" secondItem="VJT-lO-FNI" secondAttribute="leading" id="saE-Eb-PeB"/>
+                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="RED-KU-XOZ" secondAttribute="bottom" id="XXH-bZ-rbM"/>
+                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="-11" id="ioW-b5-WJj"/>
+                            <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="WEi-k0-yGT" secondAttribute="bottom" id="oHS-bQ-1ze"/>
+                            <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="34" id="red-Hv-8jK"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="top" secondItem="OVl-W9-bgZ" secondAttribute="bottom" constant="-2" id="zhD-W5-6Pu"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Stowaway" id="Pcw-6q-lgL"/>
                     <connections>
                         <outlet property="dropOffSearchBar" destination="OVl-W9-bgZ" id="665-jO-bWV"/>
                         <outlet property="dropOffSearchDisplayController" destination="Hec-aF-RnK" id="Vwz-VS-frZ"/>
@@ -1012,7 +1002,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="DA0DDA9E-B368-45E1-8C41-7B42B4C5F077" colorSpace="pattern"/>
+                                <color key="color" patternImage="EC1AD203-65A6-4F72-A08D-DAC765DDA144" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -1225,7 +1215,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="DA0DDA9E-B368-45E1-8C41-7B42B4C5F077" width="320" height="460">
+        <image name="2A048E5B-4D35-42EC-80C3-CD7D4CEA3847" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11112,7 +11102,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="E40E0461-D0FE-43F7-916A-E0E6FA3B377D" width="320" height="460">
+        <image name="EC1AD203-65A6-4F72-A08D-DAC765DDA144" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
