--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -778,15 +778,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
-                                <rect key="frame" x="0.0" y="159" width="320" height="321"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="gzB-dY-rge" id="cVN-PG-0e6"/>
-                                </connections>
-                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="from-to.png" translatesAutoresizingMaskIntoConstraints="NO" id="kIP-Jh-lle">
+                                <rect key="frame" x="0.0" y="53" width="320" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="pickUpSearchBar" searchBarStyle="minimal" placeholder="Enter Pick Up Location" translatesAutoresizingMaskIntoConstraints="NO" id="bxD-02-fZW" userLabel="pickUpSearchBar">
-                                <rect key="frame" x="0.0" y="54" width="320" height="44"/>
+                                <rect key="frame" x="35" y="54" width="285" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -794,15 +791,26 @@
                                 </connections>
                             </searchBar>
                             <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="dropOffSearchBar" searchBarStyle="minimal" placeholder="Enter Drop Off Location" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-W9-bgZ" userLabel="dropOffSearchBar">
-                                <rect key="frame" x="0.0" y="87" width="320" height="44"/>
+                                <rect key="frame" x="35" y="84" width="285" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="gzB-dY-rge" id="6QT-DA-c6F"/>
                                 </connections>
                             </searchBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RED-KU-XOZ">
+                                <rect key="frame" x="0.0" y="123" width="320" height="312"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="gzB-dY-rge" id="cVN-PG-0e6"/>
+                                </connections>
+                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="find-crew-background.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
+                                <rect key="frame" x="0.0" y="425" width="320" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
-                                <rect key="frame" x="68" y="129" width="189" height="30"/>
+                                <rect key="frame" x="68" y="437" width="189" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352941176467" green="0.62745098039215685" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
@@ -821,7 +829,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="245" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="8285976C-3697-48DC-B2E7-1D8AFFB1CCC6" colorSpace="pattern"/>
+                                <color key="color" patternImage="561A65A6-1411-4993-9A5F-121B1811C700" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9pr-OR-ZzO">
                                 <rect key="frame" x="0.0" y="9" width="320" height="44"/>
@@ -836,11 +844,17 @@
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="RED-KU-XOZ" secondAttribute="bottom" id="XXH-bZ-rbM"/>
-                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="top" secondItem="bxD-02-fZW" secondAttribute="bottom" constant="-11" id="ioW-b5-WJj"/>
-                            <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="WEi-k0-yGT" secondAttribute="bottom" id="oHS-bQ-1ze"/>
-                            <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="34" id="red-Hv-8jK"/>
-                            <constraint firstItem="WEi-k0-yGT" firstAttribute="top" secondItem="OVl-W9-bgZ" secondAttribute="bottom" constant="-2" id="zhD-W5-6Pu"/>
+                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="rIt-U9-bXz" secondAttribute="bottom" id="2R0-d5-AEL"/>
+                            <constraint firstItem="kIP-Jh-lle" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="33" id="6Cl-WQ-2Na"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerY" secondItem="rIt-U9-bXz" secondAttribute="centerY" constant="-0.5" id="7DP-UQ-sbL"/>
+                            <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="kIP-Jh-lle" secondAttribute="bottom" constant="-1" id="8DA-e4-K26"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="rIt-U9-bXz" secondAttribute="centerX" constant="2.5" id="D6B-Uw-WOT"/>
+                            <constraint firstItem="rIt-U9-bXz" firstAttribute="top" secondItem="RED-KU-XOZ" secondAttribute="bottom" constant="-10" id="Iaq-zE-pfc"/>
+                            <constraint firstItem="bxD-02-fZW" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="34" id="L0J-2G-JUv"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="top" secondItem="rIt-U9-bXz" secondAttribute="bottom" constant="-43" id="NBi-M6-2v1"/>
+                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="64" id="WjK-bn-M87"/>
+                            <constraint firstItem="OVl-W9-bgZ" firstAttribute="top" secondItem="kIP-Jh-lle" secondAttribute="bottom" constant="-40" id="g7L-o0-tEz"/>
+                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="RED-KU-XOZ" secondAttribute="bottom" constant="45" id="iW8-t8-gJP"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1002,7 +1016,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="2F48FD84-17F3-4746-8AA5-51443EF0017F" colorSpace="pattern"/>
+                                <color key="color" patternImage="BF2DEAE6-2BF2-4536-934B-559407C58FF1" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -1215,7 +1229,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="2F48FD84-17F3-4746-8AA5-51443EF0017F" width="320" height="460">
+        <image name="561A65A6-1411-4993-9A5F-121B1811C700" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11102,7 +11116,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="8285976C-3697-48DC-B2E7-1D8AFFB1CCC6" width="320" height="460">
+        <image name="BF2DEAE6-2BF2-4536-934B-559407C58FF1" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -20991,7 +21005,9 @@ AAAAAAAAAAAJCvs
         </image>
         <image name="Icon.png" width="60" height="60"/>
         <image name="credit-card.png" width="28" height="18"/>
+        <image name="find-crew-background.png" width="320" height="85"/>
         <image name="footer.png" width="320" height="170"/>
+        <image name="from-to.png" width="320" height="107"/>
         <image name="help.png" width="22" height="22"/>
         <image name="profile.png" width="24" height="17"/>
         <image name="receipt.png" width="17" height="23"/>
